# devops-test

./: .gitignore  Dockerfile  README.md  TESTING.md  e2e-test-report-20250714-081813.json  pyproject.toml
.github/workflows/: README.md  app-deploy.yml  infrastructure.yml
k8s/: 01-namespace.yaml  02-secret.yaml  03-configmap.yaml  04-deployment.yaml  05-service.yaml  06-hpa.yaml  README.md
scripts/: E2E-README.md  README.md  ci-e2e-test.sh  configure-apim-policies.sh  configure-apim.sh  demo-apim.sh  e2e-test.sh  final-apim-test.sh  public-e2e-test.sh  test-apim.sh
src/: auth.py  main.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: README.md  conftest.py  test_integration.py  test_main.py  test_unit.py
